# travel-plan-adk

./: .env.example  .gitignore  README.md  Untitled  pyproject.toml  run.sh
.github/workflows/: ci.yml
aggregate_by_project/api/: main.py
frontend/: package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: DownloadButton.tsx  FileUpload.tsx  Progress.tsx
src/travel_plan/: __init__.py  agent.py  guardrails.py  monitoring.py  root.py
src/travel_plan/cli/: main.py
src/travel_plan/core/: __init__.py  _utils.py  agent.py  aggregate_tool.py  analyze_tool.py  model_config.py  parse_tool.py  prompts.py  report_tool.py  tools.py
src/travel_plan/schemas/: model.py
src/weekly_project_report/: __init__.py  guardrails.py  monitoring.py  root.py
src/weekly_project_report/core/: __init__.py  _utils.py  agent.py  aggregate_tool.py  analyze_tool.py  fanout.py  model_config.py  parallel_analysis.py  parse_tool.py  prompts.py  report_tool.py  runners.py  tools.py
src/weekly_project_report/schemas/: model.py
tests/: test_aggregate_tool.py  test_analyze_tool.py  test_guardrails.py  test_monitoring.py  test_parse_tool.py  test_report_tool.py  test_utils.py
uploads/: 20260424_171822_024821___2026년4월3주차_주간업무보고_AX그룹_AX수행2센터_20260417.xlsx  weekly_report_20260424_172053.md  weekly_report_20260424_172206.md
